test/corpus/basic.txt
==================
Basic AINDL Test
==================

TEST {
  SIMPLE: "hello",
  NUMBER: 42
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (string))
    (property
      (identifier)
      (number))))

==================
Multiline String Test
==================

TEST {
  MULTI: """
    hello
    world
  """
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (multiline_string))))

==================
Array Test
==================

TEST {
  ITEMS: [
    "one",
    2,
    """three"""
  ]
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (array
        (string)
        (number)
        (multiline_string)))))
