test/corpus/multiline.txt
// tree-sitter-aindl/corpus/multiline.txt

================================================================================
Minimal multiline string
================================================================================

TEST {
  BASIC: ```
hello
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (code))))


================================================================================
Mixed string types
================================================================================

TEST {
  REGULAR: "hello"
  MULTI: ```
world
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (string))
    (property
      (identifier)
      (code))))

================================================================================
Basic multiline strings
================================================================================

DOCS {
  BASIC: ```
This is a
multiline string
test
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (code))))

================================================================================
Mixed complex structure simplified
================================================================================

SYSTEM {
  CONFIG {
    MODE: "advanced"
    FLAGS: [true false]
  }

  COMPONENTS {
    PARSER {
      RULES: ```
rule1
rule2
```
      ENABLED: true
    }
  }
}

---

(source_file
  (block
    (identifier)
    (block
      (identifier)
      (property
        (identifier)
        (string))
      (property
        (identifier)
        (array
          (boolean)
          (boolean))))
    (block
      (identifier)
      (block
        (identifier)
        (property
          (identifier)
          (code))
        (property
          (identifier)
          (boolean))))))

================================================================================
Empty multiline string
================================================================================

TEST {
  EMPTY: ```
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (code))))


================================================================================
Multiline with single backtick
================================================================================

TEST {
  CODE: ```
function test() {
  return `template literal`;
}
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (code))))

================================================================================
Multiline with double backticks
================================================================================

TEST {
  MARKDOWN: ```
Here is ``inline code``
And more ``stuff``
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (code))))

================================================================================
Multiline with mixed backticks
================================================================================

TEST {
  MIXED: ```
Single: `
Double: ``
Mixed: `stuff`` more`
Code: `const x = "y"`
```
}

---

(source_file
  (block
    (identifier)
    (property
      (identifier)
      (code))))
